--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="spring006">
+    <wb-module deploy-name="ourteampro">
         <wb-resource deploy-path="/" source-path="/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="spring006"/>
-        <property name="java-output-path" value="/spring006/webapp/WEB-INF/classes"/>
+        <property name="java-output-path" value="/ourteampro/webapp/WEB-INF/classes"/>
+        <property name="context-root" value="ourteampro"/>
     </wb-module>
 </project-modules>
